Added experimental support for ip cameras